# a2a-samples

./: .editorconfig  .gitignore  .golangci.yml  .ruff.toml  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  PR_COMMENT_RESPONSE.md  PR_DESCRIPTION.md  README.md  format.sh  pyproject.toml
.firebase-studio/: idx-template.json  idx-template.nix
a2a-samples-main/: README.md
demo/: README.md
extensions/: .gitignore
extensions/secure-passport/v1/samples/python/: README.md  pyproject.toml  run.py
extensions/secure-passport/v1/samples/python/src/secure_passport_ext/: __init__.py
extensions/secure-passport/v1/samples/python/tests/: test_secure_passport.py
extensions/trace-trust/v1/samples/python/: pyproject.toml  run.py
extensions/trace-trust/v1/samples/python/src/trace_trust_ext/: __init__.py
extensions/trace-trust/v1/samples/python/tests/: test_trace_trust.py
itk/: .dockerignore  (+10 more)
itk-dashboard/: app.js  index.html  style.css
itk/agents/python/v10/: build_protos.sh  main.py  pyproject.toml
itk/agents/python/v10/pyproto/: instruction_pb2_grpc.py
samples/extensions/signing/v1/python/: README.md  pyproject.toml  signing.py
samples/extensions/signing/v1/python/src/a2a_signing_ext/: signing.py
samples/extensions/signing/v1/python/tests/: test_signing.py
samples/gateways/gemini-interactions-api/: .dockerignore  .gcloudignore  .gitignore  Makefile  README.md  agents.json  pyproject.toml
samples/gateways/gemini-interactions-api/agent-template/: AGENTS.md
samples/gateways/gemini-interactions-api/agent-template/skills/artifact-export/: SKILL.md
samples/gateways/gemini-interactions-api/agent-template/skills/data-analyst/: SKILL.md
samples/gateways/gemini-interactions-api/bridge/: __init__.py  app.py  auth.py  config.py  executor.py  interactions.py  runtime.py  sessions.py  storage.py  stream.py
samples/gateways/gemini-interactions-api/cli/: __init__.py  __main__.py  ge.py  http.py  skills.py  template.py
samples/gateways/gemini-interactions-api/terraform/: .gitignore  firestore.rules  main.tf  variables.tf
samples/gateways/gemini-interactions-api/tests/: __init__.py  test_app.py  test_auth.py  test_card.py  test_cli.py  test_config.py  test_content.py  test_e2e.py  test_executor.py  test_render.py  test_sessions.py  test_stream.py
samples/python/agents/a2a_dspy/: .env.sample  .ruff.toml  README.md  __main__.py  executor.py  logger.py  pyproject.toml  run.py  test_client.py
samples/python/agents/a2a_dspy/agents/: dspy_example.py
samples/python/agents/a2a_dspy/memory/: base.py  mem0.py
samples/python/agents/ai-creative-studio/agents/brand_strategist/: .dockerignore  .gitignore  Dockerfile  __init__.py  agent.py  pyproject.toml
samples/python/agents/azureaifoundry_sdk/hello_world_agent/: .env.template  .gitignore  DEVELOPMENT.md  Dockerfile  README.md  __main__.py  docker-compose.yml  pyproject.toml  setup.sh
samples/python/agents/azureaifoundry_sdk/hello_world_agent/examples/: README.md  error_handling.py  multi_turn.py  simple_chat.py
samples/python/agents/azureaifoundry_sdk/hello_world_agent/hello_world_agent/: __init__.py  __main__.py  cli.py  client.py  hello_agent.py  mock_agent.py  utils.py  web_app.py
samples/python/agents/azureaifoundry_sdk/hello_world_agent/hello_world_agent/static/: style.css
samples/python/agents/azureaifoundry_sdk/hello_world_agent/hello_world_agent/templates/: index.html
samples/python/agents/azureaifoundry_sdk/hello_world_agent/tests/: test_hello_agent.py
samples/python/agents/github-agent/: README.md  __main__.py  anthropic_agent_executor.py  openai_agent_executor.py  pyproject.toml
samples/python/agents/langgraph/: README.md  pyproject.toml
samples/python/agents/langgraph/app/: __main__.py  agent.py  agent_executor.py  test_client.py  test_minimax.py
samples/python/agents/real_estate_agent/: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
samples/python/agents/real_estate_agent/dafty-mcp/: .dockerignore  .gitignore  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
samples/python/agents/real_estate_agent/dafty-mcp/src/: config.ts  errors.ts  logger.ts  server.ts  types.ts
samples/python/agents/real_estate_agent/dafty-mcp/src/services/: daftApi.service.ts  daftScraper.service.ts  fetch.service.ts  parser.service.ts  queryParser.service.ts
samples/python/agents/real_estate_agent/deployment/gcp/: gcp_initial_vm_setup.sh  gcp_startup_service.sh
samples/python/agents/real_estate_agent/real_estate_agent/: agent_card.py  agent_executor.py
samples/python/agents/real_estate_agent/real_estate_agent/mcp_clients/: dafty_mcp_client.py
samples/python/agents/real_estate_agent/real_estate_agent/middleware/: auth.py
samples/python/agents/real_estate_agent/tests/: test_main.py
samples/python/agents/sap_maintenance/: Containerfile  README.md  pyproject.toml  ruff.toml
samples/python/agents/sap_maintenance/app/: __init__.py  __main__.py  agent.py  agent_config.py  agent_executor.py  mock_sap_data.py  prompts.py  tool_policy.py  tools.py
samples/python/agents/sap_maintenance/app/tests/: test_agent.py
samples/python/extensions/helloworld/: README.md  pyproject.toml
samples/python/extensions/helloworld/src/helloworld_ext/: __init__.py
samples/python/extensions/settlement/: README.md  pyproject.toml
samples/python/extensions/settlement/src/settlement_ext/: __init__.py
samples/python/extensions/settlement/tests/: test_settlement_ext.py
samples/python/hosts/cli/cli_v10/: README.md  __main__.py  pyproject.toml
samples/rust/: Cargo.toml  README.md
samples/rust/a2a-core/: Cargo.toml
samples/rust/a2a-core/src/: error.rs  jsonrpc.rs  lib.rs  types.rs
samples/rust/a2a-server/: Cargo.toml
samples/rust/a2a-server/src/: executor.rs  handler.rs  lib.rs  server.rs  store.rs
samples/rust/agents/hello_world/: Cargo.toml  README.md
samples/rust/agents/hello_world/src/: main.rs
samples/rust/agents/helloworld/: Cargo.toml  README.md
samples/rust/agents/helloworld/src/: main.rs
(+752 files in other folders)
