[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vertex-a2a-bridge"
version = "0.1.0"
description = "A2A protocol bridge for the Vertex AI Interactions API"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
dependencies = [
  "a2a-sdk[http-server]>=1.0.3",
  "httpx>=0.27",
  "uvicorn[standard]>=0.30",
  "starlette>=0.37",
  "sse-starlette>=2.1",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "google-auth>=2.29",
  "google-cloud-firestore>=2.16",
  "google-cloud-secret-manager>=2.20",
  "google-cloud-storage>=2.16",
  "cachetools>=5.3",
  "protobuf>=4.25",
  "requests>=2.32",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
  "mypy>=1.10",
]

[project.scripts]
a2a-bridge = "cli.__main__:main"

[tool.setuptools]
packages = ["bridge", "cli"]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
no_implicit_optional = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
