[project]
name = "itk-python-v10-agent"
version = "0.1.0"
description = "ITK Python v1.0 Agent"
dependencies = [
    "a2a-sdk[sqlite,grpc,http-server] @ git+https://github.com/a2aproject/a2a-python.git@734d0621dc6170d10d0cdf9c074e5ae28531fc71",
    "fastapi",
    "uvicorn",
    "grpcio",
    "grpcio-tools",
    "protobuf",
    "sse-starlette",
    "httpx-sse",
    "packaging",
]

[tool.uv]
package = false
