[project]
name = "itk-python-v10-agent"
version = "0.1.0"
description = "ITK Python v1.0 Agent"
dependencies = [
    "a2a-sdk[sqlite,grpc,http-server] @ git+https://github.com/a2aproject/a2a-python.git@v1.0.0-alpha.0",
    "fastapi",
    "uvicorn",
    "grpcio",
    "grpcio-tools",
    "protobuf",
    "sse-starlette",
    "httpx-sse",
    "packaging",
]

[tool.uv]
package = false
