[project]
name = "a2a-dspy"
version = "0.1.0"
authors = ["Arthur Jacobina <email27arthur@gmail.com>"]
description = "dspy a2a simple example"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a>=0.44",
    "a2a-sdk[http-server]>=0.3.19",
    "braintrust>=0.3.9",
    "click>=8.1.8",
    "dspy>=2.6.13",
    "mem0ai>=0.1.115",
    "uvicorn>=0.34.0",
]
