[tool.poetry]
name = "real-estate-agent"
version = "0.1.0"
description = "A2A Agent for finding real estate properties"
authors = ["Roo"]

[tool.poetry.dependencies]
python = "^3.13"
a2a-sdk = "0.2.10"
gunicorn = "23.0.0"
python-dotenv = "1.0.1"
uvicorn = "0.29.0"
mcp = "1.10.1"
fastapi = "^0.115.2"
pydantic = "2.11.7"
requests = "2.32.4"

[tool.poetry.group.dev.dependencies]
pytest = "7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"