[project]
name = "a2a-sample-agent-sap-maintenance"
version = "0.1.0"
description = "SAP S/4HANA Maintenance Order Agent with A2A Protocol — PEOS architecture"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "httpx>=0.28.1",
    "langgraph>=0.3.18",
    "langchain-openai>=0.3.0",
    "langchain-core>=0.3.0",
    "litellm>=1.50.0",
    "langchain-litellm>=0.0.1",
    "pydantic>=2.10.6",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.34.2",
    "starlette>=0.46.2",
    "a2a-sdk>=0.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
