[project]
name = "helloworld_ext"
version = "0.1.0"
description = "Hello world A2A extension impl"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["a2a-sdk@git+https://github.com/a2aproject/a2a-python"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
