[project]
name = "settlement_ext"
version = "0.1.0"
description = "A2A Settlement Extension — escrow-based payment for A2A agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["a2a-sdk>=0.3.0", "a2a-settlement>=0.8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
