# pyproject.toml

[tool.poetry]
name = "secure-passport-ext"
version = "1.0.0"
description = "A2A Protocol Extension Sample: Secure Passport for Contextual State Sharing"
authors = ["Your Name <you@example.com>"]
license = "Apache-2.0"

# --- CORRECTED PACKAGES DEFINITION ---
# This is an ARRAY of tables defining where Poetry finds your source code.
packages = [
    { include = "secure_passport_ext", from = "src" }
]
# ------------------------------------

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.0.0"
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"