# pyproject.toml

[tool.poetry]
name = "secure-passport-ext"
version = "1.0.0"
description = "A2A Protocol Extension Sample: Secure Passport for Contextual State Sharing"
authors = ["Antonio Gulli <gulli@google.com>"]
license = "Apache-2.0"

[tool.poetry.packages]
packages = [
    { include = "secure_passport_ext", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.9"
# Only production dependencies (like Pydantic) remain here.
pydantic = "^2.0.0"

# --- NEW SECTION FOR DEVELOPMENT DEPENDENCIES ---
[tool.poetry.group.dev.dependencies]
# Dependencies only needed for development, testing, and documentation go here.
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
