[project]
name = "trace-trust-ext-sample"
version = "0.1.0"
description = "A runnable sample demonstrating the Trace Trust Extension for the A2A Protocol."
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "a2a-sdk"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trace_trust_ext"]
