[project]
name = "a2a.extensions.examples.signing.v1"
version = "0.1.0"
description = "This package implements the example signing extension for A2A in Python."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "a2a-sdk>=0.2.13",
    "httpx>=0.28.1",
    "jcs>=0.2.1",
    "jwcrypto>=1.5.6",
]
