[project]
name = "a2a-sample-client-cli-v1"
version = "1.0.0"
description = "A CLI application that demonstrates the capabilities of an A2A 1.0.0 Client."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk>=1.0.0",
    "asyncclick>=8.1.8",
    "sse-starlette>=2.2.1",
    "starlette>=0.46.1",
    "httpx>=0.28.1",
    "httpx-sse>=0.4.0",
    "protobuf>=5.29.5",
    "uvicorn>=0.34.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
